--- a/styles/pages/homepage-style.css
+++ b/styles/pages/homepage-style.css
@@ -220,19 +220,48 @@
   height: 350px;
   position: absolute;
   right: 20px;
-  top: 20px;
+  top: 40px;
   background-image: url('https://source.unsplash.com/250x350');
+  background-position: center;
+  background-size: cover;
+  z-index: -1;
+}
+
+.image-4 {
+  display: none;
+  position: absolute;
   background-position: center;
   background-size: cover;
 }
 
-.image-4 {
+.image-5 {
   width: 300px;
   height: 200px;
   margin-right: 40px;
   background-image: url('https://source.unsplash.com/300x250');
   background-position: center;
   background-size: cover;
+}
+
+.cultuur-container > .mini-bar-home {
+  display: none;
+}
+
+.mini-bar-home {
+  display: none;
+  width: 150px;
+  height: 6px;
+  border-radius: 3px;
+  background-color: var(--main-color);
+  z-index: 1;
+}
+
+.culture-bar {
+  position: absolute;
+  display: block;
+  top: 50%;
+  left: -40px;
+  width: 250px;
 }
 
 .small-bar-home {
@@ -372,20 +401,50 @@
   .js-image-slider {
     display: none;
   }
+  .cultuur-container {
+    height: 100vh;
+  }
   .image-1 {
     margin: 80px -20px 0px;
+    width: 100vw;
   }
   .image-2 {
-    position: static;
+    left: -20px;
+    top: 30vh;
+    width: 80%;
   }
   .image-3 {
-    position: static;
+    right: -20px;
   }
   .image-4 {
+    display: block;
+    background-image: url('https://source.unsplash.com/300x350');
+    width: 60%;
+    height: 250px;
+    bottom: 40px;
+    right: -20px;
+  }
+  .cultuur-container > .mini-bar-home {
+    display: block;
+    margin-right: 40%;
+  }
+  .small-bar-home {
+    margin-bottom: 30vh;
+    margin-left: 10%;
+  }
+  .culture-bar {
+    display: none;
+  }
+  .image-5 {
     display: none;
   }
   .vacancy-card {
     margin: 40px 20px;
+  }
+  .vacancy-card:hover {
+    margin: 40px 20px;
+    box-shadow: 0px 0px 0px var(--main-color);
+    transform: translate(0px, 0px);
   }
 }
 
