--- a/styles/shared/navbar-style.css
+++ b/styles/shared/navbar-style.css
@@ -71,7 +71,7 @@
 .nav-dropdown-link {
   text-decoration: none;
   font-size: 18px;
-  font-weight: 700;
+  font-weight: 300;
   color: var(--main-color);
 
   padding: 20px 0px;
